--- a/basics.asciidoc
+++ b/basics.asciidoc
@@ -26,7 +26,7 @@ mkYesod "HelloWorld" [parseRoutes|
 
 instance Yesod HelloWorld
 
-getHomeR :: Handler RepHtml
+getHomeR :: Handler Html
 getHomeR = defaultLayout [whamlet|Hello World!|]
 
 main :: IO ()
@@ -134,7 +134,7 @@ the appropriate handler function. The process is essentially:
 2. Choose a handler function.
 3. Run the handler function.
 
-The code generation follows a simply format for matching routes to handler
+The code generation follows a simple format for matching routes to handler
 function names, which we'll describe in the next section.
 
 Finally, we have a simple type synonym defining +Handler+ to make our code a
@@ -162,7 +162,7 @@ it produces an HTML file with a doctype and +html+, +head+ and +body+ tags. As
 we'll see in the Yesod typeclass chapter, this function can be overridden to do
 much more.
 
-In our example, we pass +\[whamlet|Hello World!|\]+ to +defaultLayout+.
+In our example, we pass +[whamlet|Hello World!|]+ to +defaultLayout+.
 +whamlet+ is another quasi-quoter. In this case, it converts Hamlet syntax into
 a Widget. Hamlet is the default HTML templating engine in Yesod. Together with
 its siblings Cassius, Lucius and Julius, you can create HTML, CSS and
