--- a/book.asciidoc
+++ b/book.asciidoc
@@ -48,6 +48,8 @@ include::creating-a-subsite.asciidoc[]
 
 include::understanding-request.asciidoc[]
 
+include::yesod-for-haskellers.asciidoc[]
+
 [[I_part_d1e8222]]
 = Examples
 
