Add missing XML file

--- a/book/yesod-web-framework-book.asciidoc
+++ b/book/yesod-web-framework-book.asciidoc
@@ -1,81 +1,1 @@
-= Developing Web Applications with Haskell and Yesod
-
-:author: Michael Snoyman
-:lang: en
-// a2x: --format=epub --doctype=book
-
-include::pr01.asciidoc[]
-
-[[I_part_d1e305]]
-= Basics
-
-include::introduction.asciidoc[]
-
-include::haskell.asciidoc[]
-
-include::basics.asciidoc[]
-
-include::shakespearean-templates.asciidoc[]
-
-include::widgets.asciidoc[]
-
-include::yesod-typeclass.asciidoc[]
-
-include::routing-and-handlers.asciidoc[]
-
-include::forms.asciidoc[]
-
-include::sessions.asciidoc[]
-
-include::persistent.asciidoc[]
-
-include::deploying-your-webapp.asciidoc[]
-
-[[I_part_d1e6218]]
-= Advanced
-
-include::restful-content.asciidoc[]
-
-include::yesods-monads.asciidoc[]
-
-include::authentication-and-authorization.asciidoc[]
-
-include::scaffolding-and-the-site-template.asciidoc[]
-
-include::internationalization.asciidoc[]
-
-include::creating-a-subsite.asciidoc[]
-
-include::understanding-request.asciidoc[]
-
-include::yesod-for-haskellers.asciidoc[]
-
-[[I_part_d1e8222]]
-= Examples
-
-include::initializing-foundation-data.asciidoc[]
-
-include::blog-example-advanced.asciidoc[]
-
-include::wiki-chat-example.asciidoc[]
-
-include::json-web-service.asciidoc[]
-
-include::case-study-sphinx.asciidoc[]
-
-[[I_part_d1e8717]]
-= Appendices
-
-
-
-include::monad-control.asciidoc[]
-
-include::conduits.asciidoc[]
-
-include::web-application-interface.asciidoc[]
-
-include::settings-types.asciidoc[]
-
-include::http-conduit.asciidoc[]
-
-include::xml.asciidoc[]
+book.asciidoc
