--- a/http-conduit.asciidoc
+++ b/http-conduit.asciidoc
@@ -23,6 +23,7 @@ import Data.Conduit.Binary (sinkFile)
 
 import qualified Data.ByteString.Lazy as L
 import Control.Monad.IO.Class (liftIO)
+import Control.Monad.Trans.Resource (runResourceT)
 
 main :: IO ()
 main = do
