--- a/persistent.asciidoc
+++ b/persistent.asciidoc
@@ -304,8 +304,28 @@ pass it off to other Persistent functions.
 
 [source, haskell]
 ----
+{-# LANGUAGE EmptyDataDecls    #-}
+{-# LANGUAGE FlexibleContexts  #-}
+{-# LANGUAGE GADTs             #-}
+{-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE QuasiQuotes       #-}
+{-# LANGUAGE TemplateHaskell   #-}
+{-# LANGUAGE TypeFamilies      #-}
+import           Control.Monad.IO.Class  (liftIO)
+import           Database.Persist
+import           Database.Persist.Sqlite
+import           Database.Persist.TH
+
+share [mkPersist sqlSettings, mkMigrate "migrateAll"] [persistLowerCase|
+Person
+    name String
+    age Int Maybe
+    deriving Show
+|]
+
+main :: IO ()
 main = runSqlite ":memory:" $ do
-    michaelId <- insert $ Person "Michael" 26
+    michaelId <- insert $ Person "Michael" $ Just 26
     michael <- get michaelId
     liftIO $ print michael
 ----
@@ -398,6 +418,7 @@ Person
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     -- this line added: that's it!
     runMigration $ migrate entityDefs $ entityDef (Nothing :: Maybe Person)
@@ -435,6 +456,7 @@ Car
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do runMigration migrateAll
 ----
 
@@ -521,6 +543,7 @@ Person
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
     insert $ Person "Michael" "Snoyman" 26
@@ -909,11 +932,13 @@ Person
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     time <- liftIO getCurrentTime
     runMigration migrateAll
     insert $ Person "Michael" (Just 26) time
     insert $ Person "Greg" Nothing time
+    return ()
 ----
 
 +Maybe+ is a built in, single word attribute. It makes the field optional. In
@@ -944,6 +969,7 @@ Person
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
 ----
@@ -978,6 +1004,7 @@ Person
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
 ----
@@ -1030,6 +1057,7 @@ Car
     deriving Show
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
     bruce <- insert $ Person "Bruce Wayne"
@@ -1066,6 +1094,7 @@ PersonStore
     UniquePersonStore personId storeId
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
 
@@ -1081,6 +1110,8 @@ main = runSqlite ":memory:" $ do
 
     insert $ PersonStore michael target
     insert $ PersonStore michael sevenEleven
+
+    return ()
 ----
 
 === Closer look at types
@@ -1230,8 +1261,10 @@ import Database.Persist.TH
 data Employment = Employed | Unemployed | Retired
     deriving (Show, Read, Eq)
 derivePersistField "Employment"
+----
 
--- @Main.hs
+[source, haskell]
+----
 {-# LANGUAGE QuasiQuotes, TypeFamilies, GeneralizedNewtypeDeriving, TemplateHaskell,
              OverloadedStrings, GADTs, FlexibleContexts #-}
 import Database.Persist.Sqlite
@@ -1244,12 +1277,15 @@ Person
     employment Employment
 |]
 
+main :: IO ()
 main = runSqlite ":memory:" $ do
     runMigration migrateAll
 
     insert $ Person "Bruce Wayne" Retired
     insert $ Person "Peter Parker" Unemployed
     insert $ Person "Michael" Employed
+
+    return ()
 ----
 
 +derivePersistField+ stores the data in the database using a string field, and
