--- a/web-application-interface.asciidoc
+++ b/web-application-interface.asciidoc
@@ -1,6 +1,9 @@
 [appendix]
 == Web Application Interface
 
+NOTE: This chapter currently covers WAI version 2.1. It will be updated to
+cover WAI version 3.0 in the next iteration of the book (covering Yesod 1.4).
+
 It is a problem almost every language used for web development has dealt with:
 the low level interface between the web server and the application. The
 earliest example of a solution is the venerable and battle-worn CGI (CGI),
