--- a/xml.asciidoc
+++ b/xml.asciidoc
@@ -739,6 +739,9 @@ That's where the xml2html package comes into play. It provides a ToHtml
 instance for ++Node++s, ++Document++s and ++Element++s. In order to use it,
 just import the Text.XML.Xml2Html module.
 
+__NOTE__ The ToHtml instance has since been moved into xml-conduit itself. This
+content needs to be updated.
+
 [source, haskell]
 ----
 {-# LANGUAGE OverloadedStrings #-}
@@ -748,7 +751,6 @@ import           Text.Blaze.Html                 (toHtml)
 import           Text.Blaze.Html.Renderer.String (renderHtml)
 import           Text.Hamlet.XML
 import           Text.XML
-import           Text.XML.Xml2Html               ()
 
 main :: IO ()
 main = putStr $ renderHtml $ toHtml $ Document (Prologue [] Nothing []) root []
