--- a/book/book.asciidoc
+++ b/book/book.asciidoc
@@ -63,6 +63,8 @@ include::json-web-service.asciidoc[]
 
 include::case-study-sphinx.asciidoc[]
 
+include::visitor-counter.asciidoc[]
+
 [[I_part_d1e8717]]
 = Appendices
 
