--- a/book/book.asciidoc
+++ b/book/book.asciidoc
@@ -65,6 +65,8 @@ include::case-study-sphinx.asciidoc[]
 
 include::visitor-counter.asciidoc[]
 
+include::single-process-pubsub.asciidoc[]
+
 [[I_part_d1e8717]]
 = Appendices
 
